--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,6 +18,13 @@
     <item row="0" column="0">
      <widget class="QCustomPlot" name="plot" native="true"/>
     </item>
+    <item row="1" column="0">
+     <widget class="QPushButton" name="pbStop">
+      <property name="text">
+       <string>데이터 추가 종료</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
  </widget>
